2019-07-24  Enrico Schumann  <es@enricoschumann.net>

        * NAMESPACE: export 'random_vector' and
        'compare_vectors'

        * R/neighbourfun.R (random_vector): add function
        (compare_vectors): add function

2019-05-29  Enrico Schumann  <es@enricoschumann.net>

        * R/neighbourfun.R (neighbourfun): simplify
        treatment of arguments

2019-05-28  Enrico Schumann  <es@enricoschumann.net>

        * R/neighbourfun.R (neighbourfun): new argument
        'type', with default numeric

2019-04-30  Enrico Schumann  <es@enricoschumann.net>

        * neighbourfun.R (neighbourfun): new argument 'n':
        number of elements in solution
