@@ -9,228 +9,161 @@ neighbourfun <- function(min = 0,
                          type = "numeric",
                          active = TRUE,
                          n = NULL,
-                         R = NULL, ...) {
+                         A = NULL, ...) {
 
     wmin <- min
     wmax <- max
     budget <- sum
 
+    .sub <- function(e, env) {
+        expr <- substitute(substitute(e2, env),
+                           env = list(e2 = e))
+        eval(expr)
+    }
+
     if (type == "numeric") {
 
-        if (!isTRUE(budget) && length(budget) == 2L && !random && !update) {
-            ## budget is a _range_ , i.e. a numeric vector of length two
+        .body <- quote({
+            toSell <- which(x > wmin)
+            toBuy  <- which(x < wmax)
+            i <- toSell[sample.int(length(toSell), size = 1L)]
+            j <- toBuy[ sample.int(length(toBuy),  size = 1L)]
+            stepsize <- .stepsize
+            stepsize <- min(x[i] - wmin[i], wmax[j] - x[j], stepsize)
+            x[i] <- x[i] - stepsize
+            x[j] <- x[j] + stepsize
+            x
+        })
 
-            stop("not implemented")
 
-        } else if (isTRUE(budget) && random && !update) {
 
-            ## -------- RANDOM STEPSIZE --------
+        ## [random]
+        .body <- .sub(.body,
+                      list(.stepsize =
+                               if (random)
+                                   quote(stepsize * runif(1))
+                               else
+                                   stepsize))
 
-            if (length(wmin) > 1L || length(wmax) > 1L) {
-                if (length(wmin) == 1L)
-                    wmin <- rep(wmin, length(wmax))
-                if (length(wmax) == 1L)
-                    wmax <- rep(wmax, length(wmin))
-                if (isTRUE(active))
-                    function(x, ...) {
-                        toSell <- which(x > wmin)
-                        toBuy  <- which(x < wmax)
-                        i <- toSell[sample.int(length(toSell), size = 1L)]
-                        j <- toBuy[ sample.int(length(toBuy),  size = 1L)]
-                        stepsize <- runif(1) * stepsize
-                        stepsize <- min(x[i] - wmin[i], wmax[j] - x[j], stepsize)
-                        x[i] <- x[i] - stepsize
-                        x[j] <- x[j] + stepsize
-                        x
-                    }
-                else
-                    function(x, ...) {
-                        toSell <- which(x[active] > wmin[active])
-                        toBuy  <- which(x[active] < wmax[active])
-                        i <- toSell[sample.int(length(toSell), size = 1L)]
-                        j <- toBuy[ sample.int(length(toBuy),  size = 1L)]
-                        stepsize <- runif(1) * stepsize
-                        stepsize <- min(x[active][i] - wmin[active][i],
-                                        wmax[active][j] - x[active][j],
-                                        stepsize)
-                        x[active][i] <- x[active][i] - stepsize
-                        x[active][j] <- x[active][j] + stepsize
-                        x
-                    }
-            } else {
-                ## wmin and wmax have a length of 1
-                if (isTRUE(active))
-                    function(x, ...) {
-                        x.reduce   <- which(x > wmin)
-                        x.increase <- which(x < wmax)
-                        i <- x.reduce  [sample.int(length(x.reduce  ), size = 1L)]
-                        j <- x.increase[sample.int(length(x.increase), size = 1L)]
-                        stepsize <- runif(1) * stepsize
-                        stepsize <- min(x[i] - wmin, wmax - x[j], stepsize)
-                        x[i] <- x[i] - stepsize
-                        x[j] <- x[j] + stepsize
-                        x
-                    }
-                else
-                    function(x, ...) {
-                        x.reduce   <- which(x[active] > wmin)
-                        x.increase <- which(x[active] < wmax)
-                        i <- x.reduce  [sample.int(length(x.reduce  ), size = 1L)]
-                        j <- x.increase[sample.int(length(x.increase), size = 1L)]
-                        stepsize <- runif(1) * stepsize
-                        stepsize <- min(x[active][i] - wmin,
-                                        wmax - x[active][j],
-                                        stepsize)
-                        x[active][i] <- x[active][i] - stepsize
-                        x[active][j] <- x[active][j] + stepsize
-                        x
-                    }
 
-            }
-        } else if (budget && length(budget) == 1L && !random && !update) {
 
-            ## -------- FIXED STEPSIZE --------
+        ## [wmin/wmax]
+        if (length(wmin) > 1L || length(wmax) > 1L) {
 
-            if (length(wmin) > 1L || length(wmax) > 1L) {
-                if (length(wmin) == 1L)
-                    wmin <- rep(wmin, length(wmax))
-                if (length(wmax) == 1L)
-                    wmax <- rep(wmax, length(wmin))
-                if (isTRUE(active))
-                    function(w, ...) {
-                        toSell <- which(w > wmin)
-                        toBuy  <- which(w < wmax)
-                        i <- toSell[sample.int(length(toSell), size = 1L)]
-                        j <- toBuy[ sample.int(length(toBuy),  size = 1L)]
-                        stepsize <- min(w[i] - wmin[i],
-                                        wmax[j] - w[j],
-                                        stepsize)
-                        w[i] <- w[i] - stepsize
-                        w[j] <- w[j] + stepsize
-                        w
-                    }
-                else
-                    function(w, ...) {
-                        toSell <- which(w[active] > wmin)
-                        toBuy  <- which(w[active] < wmax)
-                        i <- toSell[sample.int(length(toSell), size = 1L)]
-                        j <- toBuy[ sample.int(length(toBuy),  size = 1L)]
-                        stepsize <- min(w[active][i] - wmin[active][i],
-                                        wmax[active][j] - w[active][j],
-                                        stepsize)
-                        w[active][i] <- w[active][i] - stepsize
-                        w[active][j] <- w[active][j] + stepsize
-                        w
-                    }
-            } else {
-                function(w, ...) {
-                    toSell <- which(w > wmin)
-                    toBuy  <- which(w < wmax)
-                    i <- toSell[sample.int(length(toSell), size = 1L)]
-                    j <- toBuy[ sample.int(length(toBuy),  size = 1L)]
-                    stepsize <- min(w[i] - wmin, wmax - w[j], stepsize)
-                    w[i] <- w[i] - stepsize
-                    w[j] <- w[j] + stepsize
-                    w
-                }
-            }
-        } else if (budget && length(budget) == 2L && !random && !update) {
-            if (length(wmin) > 1L || length(wmax) > 1L) {
-                if (length(wmin) == 1L)
-                    wmin <- rep(wmin, length(wmax))
-                if (length(wmax) == 1L)
-                    wmax <- rep(wmax, length(wmin))
-                function(w, ...) {
-                    i <- sample.int(length(w), size = 1L)
-                    stepsize <- sample(c(-1,1), size = 1)*stepsize
-                    stepsize <- if (stepsize < 0) {
-                                    max(wmin[i]-w[i], stepsize, budget[1]-sum(w))
-                                } else {
-                                    min(wmax[i]-w[i], stepsize, budget[2]-sum(w))
-                                }
-                    w[i] <- w[i] + stepsize
-                    w
-                }
-            } else {
-                function(w, ...) {
-                    i <- sample.int(length(w), size = 1L)
-                    stepsize <- sample(c(-1,1), size = 1)*stepsize
-                    stepsize <- if (stepsize < 0) {
-                                    max(wmin-w[i], stepsize, budget[1]-sum(w))
-                                } else {
-                                    min(wmax-w[i], stepsize, budget[2]-sum(w))
-                                }
-                    w[i] <- w[i] + stepsize
-                    w
-                }
-            }
-        } else if (budget &&
-                   length(budget) == 1L &&
-                   random && update &&
-                   is.null(kmax)) {
-            if (is.null(R))
-                stop(sQuote("R"), " must be provided when ",
-                     sQuote("update"), " is TRUE")
+            ## wmin/wmax have length > 1
+            if (length(wmin) == 1L)
+                wmin <- rep(wmin, length(wmax))
+            if (length(wmax) == 1L)
+                wmax <- rep(wmax, length(wmin))
 
-            if (length(wmin) > 1L || length(wmax) > 1L) {
-                if (length(wmin) == 1L)
-                    wmin <- rep(wmin, length(wmax))
-                if (length(wmax) == 1L)
-                    wmax <- rep(wmax, length(wmin))
-            }
-            function(w, ...) {
-                tol <- 1e-12
-                x <- w[[1]]
+            if (!isTRUE(active))
+                .body <- .sub(.body, list(wmin = quote(wmin[active]),
+                                          wmax = quote(wmax[active])))
+        } else {
 
-                to_buy <- which(x < wmax-tol)
-                to_sell <- which(x > tol)
+            ## wmin/wmax length == 1
+            .body[[7L]] <- quote(
+                stepsize <- min(x[i] - wmin, wmax - x[j], stepsize))
+        }
 
-                i <- to_sell[sample.int(length(to_sell), size = 1L)]
-                j <- to_buy[sample.int(length(to_buy), size = 1L)]
-                eps <- runif(1) * stepsize
-                eps <- min(x[i], wmax - x[j], eps)
-                x[i] <- x[i] - eps
-                x[j] <- x[j] + eps
-                Rw <- x[[2]] + R[, c(i, j)] %*% c(-eps, eps)
-                list(w = x, Rw = Rw)
-            }
 
-        } else if (budget &&
-                   length(budget) == 1L &&
-                   !is.null(kmax) &&
-                   random && update) {
 
-            if (is.null(R))
-                stop(sQuote("R"), " must be provided when ",
-                     sQuote("update"), " is TRUE")
-            if (length(wmin) > 1L || length(wmax) > 1L) {
-                if (length(wmin) == 1L)
-                    wmin <- rep(wmin, length(wmax))
-                if (length(wmax) == 1L)
-                    wmax <- rep(wmax, length(wmin))
-            }
-            function(w, ...) {
-                tol <- 1e-12
-                x <- w[[1]]
-                J <- sum(x > tol)
-                if (J == kmax)
-                    to_buy <- which(x > tol & w < wmax)
-                else
-                    to_buy <- which(x < wmax)
-                to_sell <- which(x > tol)
-                i <- to_sell[sample.int(length(to_sell), size = 1L)]
-                j <- to_buy[sample.int(length(to_buy), size = 1L)]
-                eps <- runif(1) * stepsize
-                eps <- min(x[i], wmax - x[j], eps)
-                x[i] <- x[i] - eps
-                x[j] <- x[j] + eps
-                Rw <- x[[2]] + R[ , c(i, j)] %*% c(-eps, eps)
-                list(w = x, Rw = Rw)
-            }
+        ## [update]
+        if (is.character(update) &&
+            update == "Ax") {
+            .body[[10L]] <- quote(
+                attr(x, "Ax") <- attr(x, "Ax") +
+                    A[, c(i, j)] %*% c(-stepsize, stepsize))
+            .body[[11L]] <- quote(x)
+        }
 
-        } else
-            stop("no matches")
-    } else if (type == "logical") {
+
+
+        ## [active]
+        if (!isTRUE(active)) {
+            .body <- .sub(.body, list(x = quote(x[active])))
+            .body[[length(.body)]] <- quote(x)
+        }
+
+
+
+
+
+        ans <- function(x, ...){}
+        body(ans) <- .body
+        return(ans)
+    }
+
+##         } else if (budget && length(budget) == 2L && !random && !update) {
+##             if (length(wmin) > 1L || length(wmax) > 1L) {
+##                 if (length(wmin) == 1L)
+##                     wmin <- rep(wmin, length(wmax))
+##                 if (length(wmax) == 1L)
+##                     wmax <- rep(wmax, length(wmin))
+##                 function(w, ...) {
+##                     i <- sample.int(length(w), size = 1L)
+##                     stepsize <- sample(c(-1,1), size = 1)*stepsize
+##                     stepsize <- if (stepsize < 0) {
+##                                     max(wmin[i]-w[i], stepsize, budget[1]-sum(w))
+##                                 } else {
+##                                     min(wmax[i]-w[i], stepsize, budget[2]-sum(w))
+##                                 }
+##                     w[i] <- w[i] + stepsize
+##                     w
+##                 }
+##             } else {
+##                 function(w, ...) {
+##                     i <- sample.int(length(w), size = 1L)
+##                     stepsize <- sample(c(-1,1), size = 1)*stepsize
+##                     stepsize <- if (stepsize < 0) {
+##                                     max(wmin-w[i], stepsize, budget[1]-sum(w))
+##                                 } else {
+##                                     min(wmax-w[i], stepsize, budget[2]-sum(w))
+##                                 }
+##                     w[i] <- w[i] + stepsize
+##                     w
+##                 }
+##             }
+
+##         } else if (budget &&
+##                    length(budget) == 1L &&
+##                    !is.null(kmax) &&
+##                    random && update) {
+
+##             if (is.null(R))
+##                 stop(sQuote("R"), " must be provided when ",
+##                      sQuote("update"), " is TRUE")
+##             if (length(wmin) > 1L || length(wmax) > 1L) {
+##                 if (length(wmin) == 1L)
+##                     wmin <- rep(wmin, length(wmax))
+##                 if (length(wmax) == 1L)
+##                     wmax <- rep(wmax, length(wmin))
+##             }
+##             function(w, ...) {
+##                 tol <- 1e-12
+##                 x <- w[[1]]
+##                 J <- sum(x > tol)
+##                 if (J == kmax)
+##                     to_buy <- which(x > tol & w < wmax)
+##                 else
+##                     to_buy <- which(x < wmax)
+##                 to_sell <- which(x > tol)
+##                 i <- to_sell[sample.int(length(to_sell), size = 1L)]
+##                 j <- to_buy[sample.int(length(to_buy), size = 1L)]
+##                 eps <- runif(1) * stepsize
+##                 eps <- min(x[i], wmax - x[j], eps)
+##                 x[i] <- x[i] - eps
+##                 x[j] <- x[j] + eps
+##                 Rw <- x[[2]] + R[ , c(i, j)] %*% c(-eps, eps)
+##                 list(w = x, Rw = Rw)
+##             }
+
+##         } else
+##             stop("no matches")
+## }
+
+
+    if (type == "logical") {
 
         if (missing(stepsize))
             stepsize <- 1
