@@ -1,3 +1,9 @@
+2019-09-12  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/neighbourfun.R (neighbourfun): support
+        updating
+	(neighbourfun): refactor; use 'substitute'
+
 2019-07-24  Enrico Schumann  <es@enricoschumann.net>
 
         * NAMESPACE: export 'random_vector' and
